--- a/demoproject/pom.xml
+++ b/demoproject/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>spring-context</artifactId>
             <version>6.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
