--- a/demoproject/pom.xml
+++ b/demoproject/pom.xml
@@ -20,9 +20,9 @@
             <version>6.0.2</version>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>6.0.2</version>
         </dependency>
     </dependencies>
 
